package be.isims.ihm.dp.tp3.ex2.code;

public interface Affichage {
    public void update();
}
