@startuml

title __CODE's Class Diagram__\n

  namespace be.isims.ihm.dp.tp3.ex2.code {
    interface be.isims.ihm.dp.tp3.ex2.code.Affichage {
        {abstract} + update()
    }
  }
  

  namespace be.isims.ihm.dp.tp3.ex2.code {
    class be.isims.ihm.dp.tp3.ex2.code.AffichageCondition {
        + AffichageCondition()
        + update()
    }
  }
  

  namespace be.isims.ihm.dp.tp3.ex2.code {
    class be.isims.ihm.dp.tp3.ex2.code.AffichageStatistique {
        + AffichageStatistique()
        + update()
    }
  }
  

  namespace be.isims.ihm.dp.tp3.ex2.code {
    class be.isims.ihm.dp.tp3.ex2.code.Client {
        {static} + main()
    }
  }
  

  namespace be.isims.ihm.dp.tp3.ex2.code {
    abstract class be.isims.ihm.dp.tp3.ex2.code.Station {
        # affichages : ArrayList<Affichage>
        + addObservateur()
        + delObservateur()
        + notifier()
    }
  }
  

  namespace be.isims.ihm.dp.tp3.ex2.code {
    class be.isims.ihm.dp.tp3.ex2.code.StationMeteo {
        - humidite : float
        - temperatureMax : float
        - temperatureMin : float
        - temperatureMoyenne : float
        + ajouterDonnees()
        + getHumidite()
        + getTemperatureMax()
        + getTemperatureMin()
        + getTemperatureMoyenne()
    }
  }
  

  be.isims.ihm.dp.tp3.ex2.code.AffichageCondition .up.|> be.isims.ihm.dp.tp3.ex2.code.Affichage
  be.isims.ihm.dp.tp3.ex2.code.AffichageCondition o-- be.isims.ihm.dp.tp3.ex2.code.StationMeteo : station
  be.isims.ihm.dp.tp3.ex2.code.AffichageStatistique .up.|> be.isims.ihm.dp.tp3.ex2.code.Affichage
  be.isims.ihm.dp.tp3.ex2.code.AffichageStatistique o-- be.isims.ihm.dp.tp3.ex2.code.StationMeteo : station
  be.isims.ihm.dp.tp3.ex2.code.StationMeteo -up-|> be.isims.ihm.dp.tp3.ex2.code.Station


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
